--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -5,6 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{template "title" .}} - Snippetbox</title>
+    <!-- Link to the CSS stylesheet, favicon and Google fonts -->
+    <link rel="stylesheet" href="/static/css/main.css" />
+    <link
+      rel="shortcut icon"
+      href="/static/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700"
+    />
   </head>
   <body>
     <header>
@@ -13,6 +24,8 @@
     {{template "nav" .}}
     <main>{{template "main" .}}</main>
     {{template "footer" .}}
+    <!-- Link to JavaScript file -->
+    <script src="/static/js/main.js"></script>
   </body>
 </html>
 {{end}}
