--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -12,7 +12,8 @@
     <td>
       <a href="/snippet/view?id={{.ID}}">{{.Title}}</a>
     </td>
-    <td>{{.Created_On}}</td>
+    <!-- Use the new template func -->
+    <td>{{humanDate .Created_On}}</td>
     <td>#{{.ID}}</td>
   </tr>
   {{end}}
