--- a/ui/html/pages/view.html
+++ b/ui/html/pages/view.html
@@ -10,8 +10,9 @@
     </pre
   >
   <div class="metadata">
-    <time>Created on: {{.Created_On}}</time>
-    <time>Expires on: {{.Expires_On}}</time>
+    <!-- Use the new template func -->
+    <time>Created on: {{humanDate .Created_On}}</time>
+    <time>Expires on: {{humanDate .Expires_On}}</time>
   </div>
 </div>
 {{end}} {{end}}
