--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -9,8 +9,9 @@
   </tr>
   {{range .Snippets}}
   <tr>
+    <!-- Use the new clean URL style -->
     <td>
-      <a href="/snippet/view?id={{.ID}}">{{.Title}}</a>
+      <a href="/snippet/view/{{.ID}}">{{.Title}}</a>
     </td>
     <!-- Use the new template func -->
     <td>{{humanDate .Created_On}}</td>
