Began setting up an HTML form for creating snippets

--- a/ui/html/pages/create.html
+++ b/ui/html/pages/create.html
@@ -2,11 +2,11 @@
 <form action="/snippet/create" method="post">
   <div>
     <label>Title:</label>
-    <input type="text" name="Title" placeholder="title" />
+    <input type="text" name="title" placeholder="title" />
   </div>
   <div>
     <label>Content:</label>
-    <textarea name="content" title="Content"></textarea>
+    <textarea name="content" title="content"></textarea>
   </div>
   <div>
     <label>Delete in:</label>
