Used the  r.ParseForm() method to parse the request body and the r.PostForm.Get() method to get to the form data within r.PostForm

--- a/ui/html/pages/create.html
+++ b/ui/html/pages/create.html
@@ -12,15 +12,15 @@
     <label>Delete in:</label>
     <input
       type="radio"
-      name="expires in"
+      name="expires value"
       value="365"
       title="One Year"
       checked
     />
     <label>One Year</label>
-    <input type="radio" name="expires in" value="7" title="One Week" />
+    <input type="radio" name="expires value" value="7" title="One Week" />
     <label>One Week</label>
-    <input type="radio" name="expires in" value="1" title="One Day" />
+    <input type="radio" name="expires value" value="1" title="One Day" />
     <label>One Day</label>
   </div>
   <div>
