--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -22,7 +22,12 @@
       <h1><a href="/">Snippetbox</a></h1>
     </header>
     {{template "nav" .}}
-    <main>{{template "main" .}}</main>
+    <main>
+      <!-- Display the flash message if one exists -->
+      {{with .Flash}}
+      <div class="flash">{{.}}</div>
+      {{end}} {{template "main" .}}
+    </main>
     {{template "footer" .}}
     <!-- Link to JavaScript file -->
     <script src="/static/js/main.js"></script>
