Created a users database model, and users file in the GO code

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -14,7 +14,7 @@
       <a href="/snippet/view/{{.ID}}">{{.Title}}</a>
     </td>
     <!-- Use the new template func -->
-    <td>{{humanDate .Created_On}}</td>
+    <td>{{humanDate .CreatedOn}}</td>
     <td>#{{.ID}}</td>
   </tr>
   {{end}}
