--- a/ui/html/pages/view.html
+++ b/ui/html/pages/view.html
@@ -11,8 +11,8 @@
   >
   <div class="metadata">
     <!-- Use the new template func -->
-    <time>Created on: {{humanDate .Created_On}}</time>
-    <time>Expires on: {{humanDate .Expires_On}}</time>
+    <time>Created on: {{humanDate .CreatedOn}}</time>
+    <time>Expires on: {{humanDate .ExpiresOn}}</time>
   </div>
 </div>
 {{end}} {{end}}
