--- a/ui/html/pages/create.html
+++ b/ui/html/pages/create.html
@@ -1,5 +1,5 @@
 {{define "title"}}Create a New Snippet{{end}} {{define "main"}}
-<form action="/snippet/create" method="post">
+<form action="/snippet/create" method="POST">
   <div>
     <label>Title:</label>
     <!-- Use the 'with' action to render the value of .Form.FieldErrors.title if it is not empty. -->
