--- a/ui/html/pages/signup.html
+++ b/ui/html/pages/signup.html
@@ -1,5 +1,5 @@
 {{define "title"}}Signup{{end}} {{define "main"}}
-<form action="/user/signup" method="post" novalidate>
+<form action="/user/signup" method="POST" novalidate>
   <div>
     <label>Name:</label>
     {{with .Form.FieldErrors.name}}
@@ -12,7 +12,7 @@
     {{with .Form.FieldErrors.email}}
     <label class="error">{{.}}</label>
     {{end}}
-    <input type="text" name="email" title="email" value="{{.Form.Email}}" />
+    <input type="email" name="email" title="email" value="{{.Form.Email}}" />
   </div>
   <div>
     <label>Password:</label>
