Implemented a 'Change Password' feature for the app

--- a/ui/html/pages/account.html
+++ b/ui/html/pages/account.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <th>Password</th>
-            <td>Change Password</td>
+            <td><a href="/account/password/update">Change Password</a></td>
         </tr>
     </table>
     {{end }}
